@@ -1,3 +1,8 @@
+2007-03-22  Richard Dale  <rdale@foton.es>
+
+	* Added debug methods for logging GCHandle.Alloc() and Free() calls
+	* Freed GCHandles in a few places, but there are still a lot of leaks
+
 2007-03-21  Arno Rehn  <arno@arnorehn.de>
 
 	* Moved the check and 'workaround' for instance operators from C# to C++.
